--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,10 @@ commands =
 [testenv:style]
 skip_install = True
 usedevelop = False
-deps = flake8
+deps = 
+    flake8
+    flake8-import-order
+    flake8-black
 commands =
     flake8 setup.py ./deepspyce ./tests --ignore=E402 {posargs}
 
@@ -24,10 +27,9 @@ commands =
 deps =
     coverage
     pytest-cov
-    textdistance
 commands =
     - coverage erase
-    pytest -q tests/ --cov=deepspyce/ --cov-append --cov-report=
+    - pytest -q tests/ --cov=deepspyce/ --cov-append --cov-report=
     coverage report --fail-under=80 -m
 
 
