--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
     flake8-import-order
     flake8-black
 commands =
-    flake8 setup.py ./deepspyce ./tests --ignore=E402 {posargs}
+    flake8 setup.py tests/ deepspyce/ {posargs}
 
 
 [testenv:coverage]
