Major commit. Prepare for packaging.
- [x] Create and modify files for packaging.
- [x] Organize files structure.
- [x] Delete files no longer necessary (mainly in draft dir)
- [x] Delete existing test/__pycache__/ files.
- [x] Create and modified tests.
- [x] Add header to some files.
- [ ] Configure tox.ini.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,9 @@
-# content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py38, style, coverage, docstyle
+envlist = py37, py38, py39, style, docstyle, coverage, check-manifest
 
+# =============================================================================
+# ENVS
+# =============================================================================
 
 [testenv]
 deps =
@@ -9,32 +11,36 @@ deps =
 commands =
     pytest tests/ {posargs}
 
-
 [testenv:style]
 skip_install = True
 usedevelop = False
 deps = 
     flake8
-    flake8-import-order
     flake8-black
 commands =
     flake8 setup.py tests/ deepspyce/ {posargs}
 
+[testenv:docstyle]
+deps =
+    pydocstyle
+commands =
+    pydocstyle deepspyce --convention=numpy
 
 [testenv:coverage]
 deps =
+    {[testenv]deps}  # Esto instala las mismas dependencias que [testenv]
     coverage
     pytest-cov
 commands =
     - coverage erase
     - pytest -q tests/ --cov=deepspyce/ --cov-append --cov-report=
-    coverage report --fail-under=80 -m
+    coverage report --fail-under=10 -m
 
-
-[testenv:docstyle]
-deps = pydocstyle
+[testenv:check-manifest]
+skip_install = True
+usedevelop = False
+deps =
+    check-manifest
 commands =
-    pydocstyle deepspyce --convention=numpy
-
-
+    check-manifest
 
