Changes in tests. Modifications for tox passing.
- [x] Modify files for packaging. (Import orders, tox.ini, setup)
- [x] Rewrite test. Add pytest.mark.parametrize.
- [ ] Pass COVERAGE tox succesfully.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,18 @@
 [tox]
-envlist = py37, py38, py39, style, docstyle, coverage, check-manifest
+envlist = python3.7, py38, py39, style, docstyle, coverage, check-manifest
+
+# =============================================================================
+# CONF
+# =============================================================================
+
+#[gh-actions]
+#python =
+#    3.7: python3.7
+#    3.8: style, docstyle, check-manifest, py38, coverage
+#    3.9: py39
+
+#[pytest]
+#addopts = -n "auto"
 
 # =============================================================================
 # ENVS
@@ -16,6 +29,7 @@ skip_install = True
 usedevelop = False
 deps = 
     flake8
+    flake8-import-order
     flake8-black
 commands =
     flake8 setup.py tests/ deepspyce/ {posargs}
@@ -23,6 +37,7 @@ commands =
 [testenv:docstyle]
 deps =
     pydocstyle
+    toml
 commands =
     pydocstyle deepspyce --convention=numpy
 
@@ -33,8 +48,8 @@ deps =
     pytest-cov
 commands =
     - coverage erase
-    - pytest -q tests/ --cov=deepspyce/ --cov-append --cov-report=
-    coverage report --fail-under=10 -m
+    - pytest -q tests/ --cov=deepspyce --cov-append --cov-report=
+    coverage report --fail-under=80 -m
 
 [testenv:check-manifest]
 skip_install = True
