--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ deps =
     flake8
     flake8-import-order
     flake8-black
+    pep8-naming
 commands =
     flake8 setup.py tests/ deepspyce/ {posargs}
 
