Deprecated ez_setup

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = python3.7, py38, py39, style, docstyle, coverage, check-manifest
+envlist = python3.7, py38, py39, style, docstyle, check-manifest, coverage
 
 # =============================================================================
 # CONF
