--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,11 @@ envlist = python3.7, py38, py39, style, docstyle, check-manifest, coverage
 # CONF
 # =============================================================================
 
-#[gh-actions]
-#python =
-#    3.7: python3.7
-#    3.8: style, docstyle, check-manifest, py38, coverage
-#    3.9: py39
+[gh-actions]
+python =
+    3.7: python3.7
+    3.8: py38, style, docstyle, check-manifest, coverage
+    3.9: py39
 
 #[pytest]
 #addopts = -n "auto"
@@ -59,4 +59,3 @@ deps =
     check-manifest
 commands =
     check-manifest
-
